Update ShelfWindowWatcher Mash conditionals

Bug: 722496
Change-Id: I797582085ebaf0c3f63b0eb4ec60d605342c5129
Reviewed-on: https://chromium-review.googlesource.com/1183584
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584923}